--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,7 @@
 @import '../assets/iconfont/iconfont.css';
+@import './variables.scss';
+@import './mixin.scss';
+@import './sidebar.scss';
 
 body {
   height: 100%;
