--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,8 @@
 @import '../assets/iconfont/iconfont.css';
 @import './variables.scss';
 @import './mixin.scss';
+//@import './transition.scss';
+//@import './element-ui.scss';
 @import './sidebar.scss';
 
 body {
